# stickler

./: .editorconfig  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  find_min_versions.py  index.html  objects.inv  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  test_clean_env.sh  test_version_bounds.py
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  lint.yaml  restrict_main_pr.yaml  run_pytest.yaml  security.yaml  workflow.yml
API-Reference/: index.html
API-Reference/api/: index.html
API-Reference/comparators/: index.html
API-Reference/evaluator/: index.html
API-Reference/models/: index.html
API-Reference/utils/: index.html
Advanced/: index.html
Advanced/aggregate-metrics/: index.html
Advanced/classification-logic/: index.html
Advanced/confidence-metrics/: index.html
Advanced/dynamic-models/: index.html
Advanced/hungarian-matching/: index.html
Advanced/model-export/: index.html
Advanced/threshold-gated-evaluation/: index.html
Core-Concepts/: index.html
Core-Concepts/Classification_Logic/: index.html
Core-Concepts/Threshold_Gated_Recursive_Evaluation/: index.html
Core-Concepts/hungarian_matching_list_of_model/: index.html
Getting-Started/: index.html
Getting-Started/Contributing/: index.html
Getting-Started/installation/: index.html
Getting-Started/known-issues/: index.html
Guides/: index.html
Guides/Best-Practices/: index.html
Guides/Comparators/: index.html
Guides/Document_Packet_Splitting/: index.html
Guides/Evaluation/: index.html
Guides/StructuredModel_Advanced_Functionality/: index.html
Guides/StructuredModel_Dynamic_Creation/: index.html
Guides/StructuredModel_compare_with_README/: index.html
Guides/Universal_Aggregate_Field_Feature/: index.html
Guides/Use-Cases/: index.html
SDK-Docs/: index.html
SDK-Docs/api/: index.html
SDK-Docs/comparators/: index.html
SDK-Docs/evaluator/: index.html
SDK-Docs/models/: index.html
SDK-Docs/utils/: index.html
docs/: Classification_Logic.md  Makefile  Migration_to_Annotated_Pattern.md  README.md  StructuredModel_Advanced_Functionality.md  StructuredModel_Dynamic_Creation.md  StructuredModel_compare_with_README.md  TODO_HUNGARIAN_MATCHING_REFACTOR.md  Threshold_Gated_Recursive_Evaluation.md  bulk_evaluator_todo.md  hungarian_matching_list_of_model.md  mkdocs.yml  requirements.txt  structured_model_REFACTORING.md
docs/docs/: .nav.yml  index.md
docs/testing/: visual-acceptance-testing.md
examples/: README.md
examples/notebooks/: Aggregate_metrics.ipynb  Bulk_Confidence_AUROC.ipynb  Complex_nested_structure.ipynb  Confidence_Estimation.ipynb  Custom_Comparator_Demo.ipynb  Document_Packet_Splitting.ipynb  Quick_start.ipynb  Review_Efficiency_Exploration.ipynb  StructuredModel_Export.ipynb  shipping_invoice_example.ipynb
examples/scripts/: aggregate_metrics_demo.py  (+11 more)
search/: search_index.json
tests/: README.md  test_compare_with_call_count.py  test_simple_list_in_structured_list_fix.py
(+311 files in other folders)
