[project]
name = "stickler-eval"
version = "0.2.1"
description = "Structured object comparison and evaluation library"
authors = [
    {name = "Spencer Romo", email = "sromo@amazon.com"},
    {name = "Ayushi Haria", email = "ayuharia@amazon.com"},
    {name = "Aditya Addepalli", email = "adiadd@amazon.com"},
    {name = "Ryan Razkenari", email = "razken@amazon.com"}
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.11.0,<3.0.0",
    "rapidfuzz>=3.4.0,<4.0.0",
    "munkres>=1.1.4",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "psutil>=5.9.6,<7.0.0",
    "pandas>=2.1.1,<3.0.0",
    "jsonschema>=4.17.3,<5.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "jinja2>=3.1.6,<3.2.0"
]

# pip-compatible extras (for `pip install -e ".[dev]"`)
# Note: the `dev` extra must be kept in sync with [dependency-groups].dev below
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
    "beautifulsoup4>=4.14.2",
    "ruff>=0.14.10",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "mkdocstrings-python",
    "pymdown-extensions",
]
llm = [
    "strands-agents>=1.0.0,<=1.16.0"
]
bert = [
    "evaluate>=0.4.0",
    "torch>=2.2.0",
    "bert-score>=0.3.0",
]
semantic = [
    "boto3>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/awslabs/stickler"
Repository = "https://github.com/awslabs/stickler"
Documentation = "https://awslabs.github.io/stickler/"
Issues = "https://github.com/awslabs/stickler/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stickler = ["reporting/html/styling/*.css", "reporting/html/interactive/*.js"]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

# uv-native dependency groups (for `uv sync`)
# Keep in sync with [project.optional-dependencies] above
[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
    "beautifulsoup4>=4.14.2",
]
lint = [
    "ruff>=0.14.10",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "mkdocstrings-python",
    "pymdown-extensions",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
